Revert "fix prefix alignment according to design in case, of prefix contains text (#742)"
This reverts commit 9bf3dd56585fbdaa4e52d2d9251012385278469e.

--- a/src/Input/InputMixins.scss
+++ b/src/Input/InputMixins.scss
@@ -16,7 +16,6 @@
     .suffix {
         margin-top: -1px;
         height: $height;
-        line-height: $height;
     }
 }
 
